// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render correctly with all the default props 1`] = `
.c2 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c0 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: max-content minmax(max-content,25%);
  grid-template-areas: 'field label' 'description random';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c0 .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c3 {
  position: relative;
  width: calc(24px * 2);
  height: 24px;
  border-radius: 15px;
}

.c3:focus-within {
  box-shadow: 0 0 0 1pt #012040;
}

.c3 > * {
  width: 100%;
  height: 100%;
  border-radius: 15px;
}

.c6 {
  z-index: 1;
  position: absolute;
  background-color: #dfe4e9;
}

.c6::after {
  content: '';
  margin: 3px;
  display: block;
  border-radius: 50%;
  background: #ffffff;
  box-shadow: 1px 3px 3px 1px rgba(0,0,0,0.2);
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: calc(24px - 6px);
  height: calc(24px - 6px);
}

.c4 {
  opacity: 0;
  z-index: 2;
  margin: 0;
  position: absolute;
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
}

.c4:disabled + .c5 {
  background: #C7D0D8;
}

.c4:checked + .c5 {
  background: #012040;
}

.c4:checked + .c5::after {
  margin-left: calc(calc(24px * 2) - (24px) + 3px);
}

<div>
  <div
    class="c0"
    id="-checkbox"
  >
    
    <div
      class="c1 c2 c3"
    >
      <input
        class="c4"
        id=""
        name="gender"
        type="checkbox"
      />
      <div
        class="c5 c6"
      />
    </div>
  </div>
</div>
`;

exports[`Checkbox component should render correctly with all the props given 1`] = `
.c1 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 0px 0.8rem;
  cursor: not-allowed;
}

.c4 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c2 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: max-content minmax(max-content,25%);
  grid-template-areas: 'field label' 'description random';
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c5 {
  position: relative;
  width: calc(28px * 2);
  height: 28px;
  border-radius: 15px;
}

.c5:focus-within {
  box-shadow: 0 0 0 1pt #012040;
}

.c5 > * {
  width: 100%;
  height: 100%;
  border-radius: 15px;
}

.c8 {
  z-index: 1;
  position: absolute;
  background-color: #dfe4e9;
}

.c8::after {
  content: '';
  margin: 3px;
  display: block;
  border-radius: 50%;
  background: #ffffff;
  box-shadow: 1px 3px 3px 1px rgba(0,0,0,0.2);
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: calc(28px - 6px);
  height: calc(28px - 6px);
}

.c6 {
  opacity: 0;
  z-index: 2;
  margin: 0;
  position: absolute;
  cursor: pointer;
}

.c6:focus {
  outline: none;
}

.c6:disabled {
  cursor: not-allowed;
}

.c6:disabled + .c7 {
  background: #C7D0D8;
}

.c6:checked + .c7 {
  background: #012040;
}

.c6:checked + .c7::after {
  margin-left: calc(calc(28px * 2) - (28px) + 3px);
}

<div>
  <div
    class="c0"
    id="Female-checkbox"
  >
    <label
      class="c1 c2"
      for="Female"
    >
      Female
    </label>
    <div
      class="c3 c4 c5"
      disabled=""
    >
      <input
        class="c6"
        disabled=""
        id="Female"
        name="gender"
        type="checkbox"
      />
      <div
        class="c7 c8"
      />
    </div>
  </div>
</div>
`;
